# haven

./: .gitignore  .local-screenshots.conf  CHANGELOG.md  PROGRESS.md  README.md  appstore-metadata.md
.claude/: launch.json
.github/workflows/: android.yml  desktop.yml  notify-portfolio.yml  relay-release.yml  release.yml
Scripts/: export-compliance.mjs
Scripts/export-compliance-tools/: encryption-statement.txt  make-statement-pdf.sh
android/: .gitignore  build-rust.sh  gradle.properties
android/Tools/: capture_screenshots.sh
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/blaineam/haven/: CoreInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/blaineam/haven/: HavenApplication.kt  MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
android/fastlane/metadata/android/en-US/changelogs/: default.txt
apple/: README.md  build-rust-xcframework.sh  project.yml
apple/HavenApp/: AccountStore.swift  Audio.swift  AudioCoordinator.swift  BackgroundUploader.swift  CallManager.swift  CameraView.swift  CaptionHarness.swift  CatalystSheet.swift  CircleSettings.swift  CircleView.swift  ConnectView.swift  Connections.swift  Contacts.swift  ContentView.swift  DemoSeed.swift  DeviceLink.swift  DeviceRoster.swift  Emoji.swift  FeedView.swift  HavenApp.swift  HiddenStore.swift  Info.macOS.plist  LinkUI.swift  LiveFilterPreview.swift  MacAgent.swift  Media.swift  MediaFilters.swift  MediaPicker.swift  Messages.swift  NearbyTransport.swift  Networking.swift  NotificationManager.swift  OnboardingView.swift  Platform.swift  PostMedia.swift  Profile.swift  PushManager.swift  QRScanner.swift  RelayHost.swift  ScheduledStore.swift  (+12 more)
apple/HavenApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
apple/HavenNotificationService/: NotificationService.swift
apple/HavenWatch/: HavenWatchApp.swift  Info.plist  WatchConnectivityClient.swift  WatchViews.swift
apple/HavenWatch/Assets.xcassets/AccentColor.colorset/: Contents.json
apple/HavenWatch/Assets.xcassets/AppIcon.appiconset/: Contents.json
apple/KithApp/: AccountStore.swift  AudioCoordinator.swift  CallManager.swift  CircleView.swift  ConnectView.swift  Connections.swift  Contacts.swift  ContentView.swift  DeviceLink.swift  EditPost.swift  Emoji.swift  FeedView.swift  Info.plist  KithApp.swift  Media.swift  MediaPicker.swift  Messages.swift  Music.swift  NearbyTransport.swift  Networking.swift  NowPlaying.swift  OnboardingView.swift  PostMedia.swift  S3Client.swift  SecretMessages.swift  Settings.swift  SharedStore.swift  Storage.swift  Stories.swift  StoryCamera.swift  StoryCaption.swift  Theme.swift
apple/KithUITests/: KithUITests.swift
apple/Shared/: SecureEnclaveBox.swift  SharedSeed.swift
apple/Tools/: capture_screenshots.sh
apple/WatchShared/: WatchBridge.swift
apple/icon/: make_icon.py
core/: Cargo.toml
core/demo/: Cargo.toml
core/demo/src/: main.rs
core/haven-net/: Cargo.toml
core/haven-net/src/: blobstore.rs  lib.rs  relay.rs  s3tunnel.rs
core/haven-net/tests/: blob_store.rs  relay_forward.rs  s3_tunnel.rs
core/haven-relay/: Cargo.toml
core/haven-relay/src/: config.rs  link.rs  main.rs  qr.rs  runner.rs
core/haven-s3/: Cargo.toml
core/haven-s3/src/: lib.rs
core/kith-net/: Cargo.toml
core/kith-net/src/: lib.rs
core/kith-net/tests/: exchange.rs
core/kith-wasm/: Cargo.toml
core/kith-wasm/src/: lib.rs
core/p2pcore/: Cargo.toml
core/p2pcore-ffi/: Cargo.toml
core/p2pcore-ffi/src/: lib.rs  multidevice.rs
core/p2pcore/src/: device.rs  groupkey.rs  identity.rs  lib.rs  link.rs  selfsync.rs  social.rs
core/p2pcore/tests/: social.rs  spine.rs
desktop/: README.md
desktop/Tools/: capture_screenshots.ps1
desktop/flatpak/: README.md  com.blaineam.haven.desktop  com.blaineam.haven.metainfo.xml  com.blaineam.haven.yml
desktop/msix/: AppxManifest.xml.in  store-listing.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns  make_icons.py
desktop/src-tauri/src/: callwire.rs  commands.rs  engine.rs  lib.rs  localmedia.rs  main.rs  roster.rs  selfsync.rs  store.rs  wire.rs
desktop/ui/: _preview.html  app.js  index.html  styles.css
docs/: ANDROID-PARITY.md  ARCHITECTURE.md  BYO-STORAGE.md  DECISIONS.md  EXPORT-COMPLIANCE.md  GROUP-KEYING.md  HAVEN-NET-RELAY.md  KITH-NET-RELAY.md  LINK-SYSTEM.md  LINUX.md  MACOS-NATIVE-PORT.md  MEDIA-AND-MUSIC.md  MULTI-DEVICE.md  NOTIFICATIONS.md  OPERATING-COSTS.md  RELAY-AND-DEPLOY.md  ROADMAP.md  SCHEDULED-MESSAGES.md  SECURITY.md  STORE-AUTOPUBLISH.md  THREAT-MODEL.md  WEB-PARITY.md  WINDOWS-PORT.md
docs/appstore-screenshots/: Haven-ipad.monkr  Haven-iphone.monkr
packaging/aur/haven-desktop/: PKGBUILD
packaging/aur/haven-relay/: PKGBUILD  haven-relay.install
push/: worker.js  wrangler.toml
push/.wrangler/cache/: wrangler-account.json
relay/: README.md  docker-compose.yml  install.sh
relay/debian/: haven-relay.service  postinst
web/: app.js  docs.html  features.html  index.html  og-poster.html  relay.html  styles.css
web/docs/: index.html
web/engine/: haven_wasm_bg.wasm  kith_wasm.d.ts  kith_wasm.js  package.json
web/features/: index.html
web/relay/: index.html
(+46 files in other folders)
