[package]
name = "haven-s3"
version = "0.0.1"
edition = "2021"
publish = false
description = "Haven BYO-storage mailbox: a tiny AWS SigV4 S3 client (put/get/list) shared by all clients."
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

# Additive crate: NOT a dependency of p2pcore / haven-net / haven_ffi, so the iOS/Android
# xcframework build is unaffected. The desktop client depends on it directly; other clients
# can adopt it later (it's the one Rust SigV4 impl, retiring per-platform S3 clients).

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
percent-encoding = "2"
quick-xml = "0.36"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
